--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ transform: translateY(-60px); /* 👈 push up */
   <div class="glow glow-3"></div>
 
   <div class="player">
-  <div class="song-title">Midnight Roads</div>
+  <div class="song-title">Ishamonii</div>
 
   <div class="center">
     <div class="play-btn" id="playBtn">
@@ -281,7 +281,7 @@ transform: translateY(-60px); /* 👈 push up */
     <div class="lyrics" id="lyrics"></div>
   </div>
 
-  <div class="credit">from momin to you</div>
+  <div class="credit">dedicated to my INOMASHI</div>
 </div>
 <audio id="audio" src="MyIshaaV5.mp3"></audio>
 
